--- a/browser/index.html
+++ b/browser/index.html
@@ -96,6 +96,7 @@ more bitcoin magic).</small>
 </form>
 <input type="button" id="newaddr" value="New Address">
 <div id="floating" class="floating"></div>
-<script src="/index.js"></script>
+<!-- <script src="/index.js"></script> -->
+
 </body>
 </html>
